<resources>
    <string name="app_name">GajDaDeuLim</string>
    <string name="IDTitleView">아이디 : </string>
    <string name="PWTitleView">비밀번호 : </string>
    <string name="IDEditText">아이디를 입력하세요.</string>
    <string name="PWEditText">비밀번호를 입력하세요.</string>
    <string name="LoginConfirmBtn">로그인</string>
    <string name="MoveMembershipBtn">회원가입</string>
    <string name="NameTitleView">이름</string>
    <string name="IdTitleView">아이디</string>
    <string name="PwTitleView">비밀번호</string>
    <string name="PwConfirmTitleView">비밀번호확인</string>
    <string name="StudentIDTitleView">학번</string>
    <string name="GenderTitleView">성별</string>
    <string name="MajorTitleView">전공</string>
    <string name="NameMemberText">이름을 입력하세요.</string>
    <string name="IDMemberText">아이디를 입력하세요.</string>
    <string name="PWMemberText">비밀번호를 입력하세요.</string>
    <string name="PWConfirmMemberText">비밀번호를 한번 더 입력하세요.</string>
    <string name="StudentMemberText">학번을 입력하세요.</string>
    <string name="GenderMemberText">성별을 입력하세요.</string>
    <string name="MajorMemberText">전공을 입력하세요.</string>
    <string name="OverlapConfirmBtn">중복확인</string>
    <string name="StudentIDAuthenticateBtn">인증하기</string>
    <string name="MoveLoginBtn">로그인 창</string>
    <string name="FinishMemberShipBtn">회원가입하기</string>
    <string name="StudentIDAuthenticateTitle">인증코드</string>
    <string name="StudentIDConfirmBtn">코드확인</string>errandContent
    <string name="EmailAuthenticateEditText">인증코드를 입력하세요.</string>
    <string name="errandContent">물건</string>
    <string name="errandTime">시간</string>
    <string name="errandPrice">심부름 값</string>
    <string name="errandName">이름</string>
    <string name="mainToolbar">bring you</string>
    <string name="defaultToolbar">bring you</string>
    <string name="BorderTitle">제목</string>
    <string name="BorderTitleHint">게시글의 제목을 입력해주세요.</string>
    <string name="BorderAddress">상세주소</string>
    <string name="BorderAddressHint">상세주소를 입력해주세요.</string>
    <string name="BorderPrice">가격</string>
    <string name="BorderPriceHint">금액을 입력</string>
    <string name="BorderText">내용</string>
    <string name="BorderTextHint">게시글의 내용을 입력해주세요.</string>
    <string name="mainBoardFragButton">메인게시판</string>
    <string name="MenuListFragButton">주문목록</string>
    <string name="ChattingFragButton">채팅방</string>
    <string name="myInfoFragButton">내정보</string>
    <string name="errandTitle">제목</string>
    <string name="main_go_btn">메인으로가기</string>
    <string name="CustomCareTextView">안녕하세요 갖다드림 고객센터 입니다.</string>
    <string name="CustomCareTextView2">신고 하실 내용을 상세히 적어주세요.</string>
    <string name="CustomCarecb_1">언어폭력</string>
    <string name="CustomCarecb_2">재화 문제</string>
    <string name="CustomCarecb_3">회원 탈퇴</string>
    <string name="CustomCarecb_4">서비스 개선 문의</string>
    <string name="CustomCarecb_5">기타</string>
    <string name="errandProgress">진행</string>
</resources>