<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MembershipActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/MemberToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/NameLinear"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/NameTitleView"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text="@string/NameTitleView"
                android:textColor="@color/colorMain"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/NameMemberText"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/NameMemberText"
                android:paddingLeft="10dp"
                android:background="@drawable/edge2"
                android:inputType="textPersonName"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/IDLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/IdTitleView"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text="@string/IdTitleView"
                android:textColor="@color/colorMain"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/IDMemberText"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/IDMemberText"
                android:inputType="textPersonName"
                android:background="@drawable/edge"
                android:paddingLeft="10dp"
                android:textSize="14sp" />

            <Button
                android:id="@+id/OverlapConfirmBtn"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:background="@drawable/edge"
                android:text="@string/OverlapConfirmBtn"
                android:textColor="@color/colorMain"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/PWLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/PwTitleView"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text="@string/PwTitleView"
                android:textColor="@color/colorMain"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/PWMemberText"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/PWMemberText"
                android:background="@drawable/edge"
                android:paddingLeft="10dp"
                android:inputType="textPassword"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/PWConfirmLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/PwConfirmTitleView"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text="@string/PwConfirmTitleView"
                android:textColor="@color/colorMain"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/PWConfirmMemberText"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/PWConfirmMemberText"
                android:background="@drawable/edge"
                android:paddingLeft="10dp"
                android:inputType="textPassword"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/StudentIDLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/StudentIDTitleView"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text="@string/StudentIDTitleView"
                android:textColor="@color/colorMain"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/StudentIDMemberText"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:background="@drawable/edge"
                android:hint="@string/StudentMemberText"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <Button
                android:id="@+id/StudentIDAuthenticateBtn"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:background="@drawable/edge"
                android:text="@string/StudentIDAuthenticateBtn"
                android:textColor="@color/colorMain"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/StudentAuthenticateLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/StudentIDAuthenticateTitle"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text="@string/StudentIDAuthenticateTitle"
                android:textColor="@color/colorMain"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/EmailAuthenticateEditText"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:background="@drawable/edge"
                android:paddingLeft="10dp"
                android:hint="@string/EmailAuthenticateEditText"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <Button
                android:id="@+id/StudentIDConfirmBtn"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:background="@drawable/edge"
                android:text="@string/StudentIDConfirmBtn"
                android:textColor="@color/colorMain"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/GenderLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/GenderTitleView"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text="@string/GenderTitleView"
                android:textColor="@color/colorMain"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/GenderMemberText"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:background="@drawable/edge"
                android:paddingLeft="10dp"
                android:hint="@string/GenderMemberText"
                android:inputType="textPersonName"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/MajorLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/MajorTitleView"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/MajorTitleView"
                android:textColor="@color/colorMain"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginRight="5dp" />

            <EditText
                android:id="@+id/MajorMemberText"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:background="@drawable/edge"
                android:paddingLeft="10dp"
                android:hint="@string/MajorMemberText"
                android:inputType="textPersonName"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">

            <Button
                android:id="@+id/MoveLoginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorMain"
                android:text="@string/MoveLoginBtn"
                android:background="@drawable/edge"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <Button
                android:id="@+id/FinishMemberShipBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorMain"
                android:text="@string/FinishMemberShipBtn"
                android:background="@drawable/edge"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>